Ajustes de Centralização

--- a/2grau/index.html
+++ b/2grau/index.html
@@ -29,6 +29,7 @@
 
 </nav>
 <header class="masthead" style="margin-top:10px;">
+  <div class="vertical-center" >
   <div class="container-fluid h-100" style="color:white">
 <div class="row h-100 justify-content-center align-items-center">
     <h4 class="text-center" style="font-weight:300"> Resolução de Equações do segundo grau</h2>
@@ -56,7 +57,7 @@
     <div class="row h-100 justify-content-center align-items-center">
   <button class="btn btn-danger btn-lg btn-xl text-uppercase" onclick="exec()">Calcular</button>
 </div>
-
+</div>
   <br><br>
   <hr color="white" class="col-xs-12">
 
