--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="css/style.css">
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -21,10 +22,12 @@
   </a>
 </nav>
 <center>
+  <div class="vertical-center" >
 <div class="container-fluid">
 
+<div class="card-deck h-100 justify-content-center align-items-center">
+
 <div class=card-deck>
-  <div class=card-deck>
         <div class="card" style="width: 18rem; margin-top:1rem;">
       <img class="card-img-top" src="https://s1.static.brasilescola.uol.com.br/artigos/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg?i=https://brasilescola.uol.com.br/upload/conteudo/images/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg&w=600&h=350&c=FFFFFF&t=1" alt="Card image cap">
       <div class="card-body">
@@ -103,7 +106,7 @@
 <a href="#" class="btn btn-danger btn-lg btn-xl text-uppercase">Calcular</a>
 </div>
 </div>
-
+</div>
 
 
 
