--- a/3x3/index.html
+++ b/3x3/index.html
@@ -33,32 +33,76 @@ Cramer Online</a>
 <header class="masthead" style="margin-top:10px;">
   <div class="vertical-center">
   <div class="container-fluid h-100" style="color:white">
+
+<form method="post" action="valida.php">
 <div class="row h-100 justify-content-center align-items-center">
-    <h4 class="text-center" style="font-weight:300"> Resolução de Equações do segundo grau</h2>
+    <h4 class="text-center" style="font-weight:300"> Resolução de sistemas lineares (3x3)</h2>
 </div>
 <div class="row h-100 justify-content-center align-items-center">
-    <h4 class="text-center" style="font-weight:200">Essa calculadora permite a resolução de equações do segundo grau.</h4>
+    <h4 class="text-center" style="font-weight:200">Essa calculadora permite a resolução de sistemas lineares (3x3).</h4>
 </div>
 <div class="row h-100 justify-content-center align-items-center">
-    <h3 class="text-center" style="font-family: overpass-mono;font-weight:100;margin-top:10px;">ax² + bx + c = 0</h4>
+    <h3 class="text-center" style="font-family: overpass-mono;font-weight:100;margin-top:10px;">ax + by + cz = j</h4><br>
+</div>
+<div class="row h-100 justify-content-center align-items-center">
+    <h3 class="text-center" style="font-family: overpass-mono;font-weight:100;margin-top:10px;">dx + ey + fz = k</h4><br>
+</div>
+<div class="row h-100 justify-content-center align-items-center">
+    <h3 class="text-center" style="font-family: overpass-mono;font-weight:100;margin-top:10px;">gx + hy + iz = l</h4>
 </div>
 
     <br>
 <center>
   <div class="row h-100 justify-content-center align-items-center ">
-    <div class="form-group col-lg-3">
-    <input type="number" class="form-control" name="a" id="a"  value="" placeholder="Insira o valor de a">
+    <div class="form-group col-lg-2">
+    <input type="number" class="form-control" name="a" id="a"  value="" placeholder="Insira o valor de a" required>
   </div>
-  <div class="form-group col-lg-3">
-    <input type="number" class="form-control" name="b" id="b" value="" placeholder="Insira o valor de b">
+  <div class="form-group col-lg-2">
+    <input type="number" class="form-control" name="b" id="b" value="" placeholder="Insira o valor de b" required>
 </div>
-    <div class="form-group col-lg-3">
-<input type="number" class="form-control" name="c" id="c" value="" placeholder="Insira o valor de c">
+    <div class="form-group col-lg-2">
+<input type="number" class="form-control" name="c" id="c" value="" placeholder="Insira o valor de c" required>
   </div>
+  <div class="form-group col-lg-2">
+<input type="number" class="form-control" name="j" id="j" value="" placeholder="Insira o valor de j" required>
 </div>
+
+</div> <br>
+
+<div class="row h-100 justify-content-center align-items-center ">
+  <div class="form-group col-lg-2">
+  <input type="number" class="form-control" name="d" id="d"  value="" placeholder="Insira o valor de d" required>
+</div>
+<div class="form-group col-lg-2">
+  <input type="number" class="form-control" name="e" id="e" value="" placeholder="Insira o valor de e" required>
+</div>
+  <div class="form-group col-lg-2">
+<input type="number" class="form-control" name="f" id="f" value="" placeholder="Insira o valor de f" required>
+</div>
+<div class="form-group col-lg-2">
+<input type="number" class="form-control" name="k" id="k" value="" placeholder="Insira o valor de k" required>
+</div>
+</div> <br>
+
+<div class="row h-100 justify-content-center align-items-center ">
+  <div class="form-group col-lg-2">
+  <input type="number" class="form-control" name="g" id="g"  value="" placeholder="Insira o valor de g" required>
+</div>
+<div class="form-group col-lg-2">
+  <input type="number" class="form-control" name="h" id="h" value="" placeholder="Insira o valor de h" required>
+</div>
+  <div class="form-group col-lg-2">
+<input type="number" class="form-control" name="i" id="i" value="" placeholder="Insira o valor de i" required>
+</div>
+<div class="form-group col-lg-2">
+<input type="number" class="form-control" name="l" id="l" value="" placeholder="Insira o valor de l" required>
+</div>
+</div>
+</form>
     <div class="row h-100 justify-content-center align-items-center">
-  <button class="btn btn-danger btn-lg btn-xl text-uppercase" onclick="exec()">Calcular</button>
-</div>
+  <button type="submit"class="btn btn-danger btn-lg btn-xl text-uppercase">Calcular</button>
+  </form>
+</div><br>
 </div>
   <br><br>
   <hr color="white" class="col-xs-12">
