--- a/index.html
+++ b/index.html
@@ -15,22 +15,23 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="#">
-    <img src="img/snizer.svg" width="60" height="30" class="d-inline-block align-top" alt="">
+    <nav class="navbar navbar-light"style="background-color: #dc3545;">
+  <a class="navbar-brand text-light" href="#">
+    <img src="img/snizer.svg" width="60" height="30" class="d-inline-block align-top" alt=""/>
     Snizer
   </a>
 </nav>
+<body style="background-color:#2ecc71;font-family:overpass;">
 <center>
   <div class="vertical-center" >
-<div class="container-fluid">
+<div class="container-fluid ">
 
 <div class="card-deck h-100 justify-content-center align-items-center">
 
 <div class=card-deck>
         <div class="card" style="width: 18rem; margin-top:1rem;">
-      <img class="card-img-top" src="https://s1.static.brasilescola.uol.com.br/artigos/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg?i=https://brasilescola.uol.com.br/upload/conteudo/images/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg&w=600&h=350&c=FFFFFF&t=1" alt="Card image cap">
-      <div class="card-body">
+ <img class="card-img-top" src="img/1grau.png" alt="Card image cap" >
+    <div class="card-body">
         <h5 class="card-title">Equação de 1 variável</h5>
         <p class="card-text"> Resolver passo a passo equações do primeiro grau</p>
         <a href="#" class="btn btn-danger btn-lg btn-xl text-uppercase">Calcular</a>
@@ -38,20 +39,20 @@
     </div>
 
     <div class="card" style="width: 18rem; margin-top:1rem;">
-  <img class="card-img-top" src="https://s1.static.brasilescola.uol.com.br/artigos/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg?i=https://brasilescola.uol.com.br/upload/conteudo/images/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg&w=600&h=350&c=FFFFFF&t=1" alt="Card image cap">
+  <img class="card-img-top" src="img/sistema2x2.png" alt="Card image cap" >
   <div class="card-body">
-    <h5 class="card-title">Equação de 2 variáveis</h5>
-    <p class="card-text"> Resolver passo a passo equações de duas variáveis</p>
+    <h5 class="card-title">Sistema Linear (2x2)</h5>
+    <p class="card-text"> Resolver passo a passo sistemas lineares (2x2)</p>
     <a href="#" class="btn btn-danger btn-lg btn-xl text-uppercase">Calcular</a>
   </div>
   </div>
 
   <div class="card" style="width: 18rem; margin-top:1rem;">
-  <img class="card-img-top" src="https://s1.static.brasilescola.uol.com.br/artigos/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg?i=https://brasilescola.uol.com.br/upload/conteudo/images/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg&w=600&h=350&c=FFFFFF&t=1" alt="Card image cap">
+  <img class="card-img-top" src="img/sistema3x3.png" alt="Card image cap">
   <div class="card-body">
-  <h5 class="card-title">Equação de 3 variáveis</h5>
-  <p class="card-text"> Resolver passo a passo equações de 3 variáveis</p>
-  <a href="#" class="btn btn-danger btn-lg btn-xl text-uppercase">Calcular</a>
+  <h5 class="card-title">Sistema Linear(3x3)</h5>
+  <p class="card-text"> Resolver passo a passo sistemas lineares (3x3)</p>
+  <a href="3x3/index.html" class="btn btn-danger btn-lg btn-xl text-uppercase">Calcular</a>
   </div>
   </div>
 
