--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="card-body">
         <h5 class="card-title">Equação de 1 variável</h5>
         <p class="card-text"> Resolver passo a passo equações do primeiro grau</p>
-        <a href="#" class="btn btn-danger btn-lg btn-xl text-uppercase">Calcular</a>
+        <a href="1var/index.html" class="btn btn-danger btn-lg btn-xl text-uppercase">Calcular</a>
       </div>
     </div>
 
@@ -43,7 +43,7 @@
   <div class="card-body">
     <h5 class="card-title">Sistema Linear (2x2)</h5>
     <p class="card-text"> Resolver passo a passo sistemas lineares (2x2)</p>
-    <a href="#" class="btn btn-danger btn-lg btn-xl text-uppercase">Calcular</a>
+    <a href="2x2/index.html" class="btn btn-danger btn-lg btn-xl text-uppercase">Calcular</a>
   </div>
   </div>
 
@@ -57,7 +57,7 @@
   </div>
 
   <div class="card" style="width: 18rem; margin-top:1rem;">
-  <img class="card-img-top" src="https://s1.static.brasilescola.uol.com.br/artigos/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg?i=https://brasilescola.uol.com.br/upload/conteudo/images/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg&w=600&h=350&c=FFFFFF&t=1" alt="Card image cap">
+  <img class="card-img-top" src="img/2grau.png" alt="Card image cap">
   <div class="card-body">
   <h5 class="card-title">Equação do Segundo Grau</h5>
   <p class="card-text"> Resolver passo a passo equações do segundo grau</p>
@@ -73,38 +73,38 @@
 
 <div class=card-deck>
   <div class="card" style="width: 18rem; margin-top:1rem;">
-  <img class="card-img-top" src="https://s1.static.brasilescola.uol.com.br/artigos/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg?i=https://brasilescola.uol.com.br/upload/conteudo/images/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg&w=600&h=350&c=FFFFFF&t=1" alt="Card image cap">
+  <img class="card-img-top" src="img/embreve.png" alt="Card image cap">
   <div class="card-body">
   <h5 class="card-title">Soma de números complexos</h5>
-  <p class="card-text"> Resolver passo a passo a soma de números complexos</p>
-  <a href="#" class="btn btn-danger btn-lg btn-xl text-uppercase">Calcular</a>
+  <p class="card-text"> Resolver passo a passo a soma de números complexos (Em breve)</p>
+  <a href="#" class="btn btn-secondary btn-lg btn-xl text-uppercase" disabled>Calcular</a>
   </div>
   </div>
 
   <div class="card" style="width: 18rem; margin-top:1rem;">
-<img class="card-img-top" src="https://s1.static.brasilescola.uol.com.br/artigos/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg?i=https://brasilescola.uol.com.br/upload/conteudo/images/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg&w=600&h=350&c=FFFFFF&t=1" alt="Card image cap">
+<img class="card-img-top" src="img/embreve.png" alt="Card image cap">
 <div class="card-body">
   <h5 class="card-title">Subtração de números complexos</h5>
-  <p class="card-text"> Resolver passo a passo a subtração de números complexos</p>
-  <a href="#" class="btn btn-danger btn-lg btn-xl text-uppercase">Calcular</a>
+  <p class="card-text"> Resolver passo a passo a subtração de números complexos (Em breve)</p>
+  <a href="#" class="btn btn-secondary btn-lg btn-xl text-uppercase" disabled>Calcular</a>
 </div>
 </div>
 
 <div class="card" style="width: 18rem; margin-top:1rem;">
-<img class="card-img-top" src="https://s1.static.brasilescola.uol.com.br/artigos/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg?i=https://brasilescola.uol.com.br/upload/conteudo/images/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg&w=600&h=350&c=FFFFFF&t=1" alt="Card image cap">
+<img class="card-img-top" src="img/embreve.png" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title">Divisão de números complexos</h5>
-<p class="card-text"> Resolver passo a passo a divisão de números complexos</p>
-<a href="#" class="btn btn-danger btn-lg btn-xl text-uppercase">Calcular</a>
+<p class="card-text"> Resolver passo a passo a divisão de números complexos (Em breve)</p>
+<a href="#" class="btn btn-secondary btn-lg btn-xl text-uppercase" disabled>Calcular</a>
 </div>
 </div>
 
 <div class="card" style="width: 18rem; margin-top:1rem;">
-<img class="card-img-top" src="https://s1.static.brasilescola.uol.com.br/artigos/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg?i=https://brasilescola.uol.com.br/upload/conteudo/images/exemplo-equacao-primeiro-grau-com-duas-incognitas-seus-coeficientes-57c579819bebd.jpg&w=600&h=350&c=FFFFFF&t=1" alt="Card image cap">
+<img class="card-img-top" src="img/embreve.png" alt="Card image cap">
 <div class="card-body">
 <h5 class="card-title">Multiplicação de números complexos</h5>
-<p class="card-text"> Resolver passo a passo a multiplicação de números complexos</p>
-<a href="#" class="btn btn-danger btn-lg btn-xl text-uppercase">Calcular</a>
+<p class="card-text"> Resolver passo a passo a multiplicação de números complexos (Em breve)</p>
+<a href="#" class="btn btn-secondary btn-lg btn-xl text-uppercase" disabled>Calcular</a>
 </div>
 </div>
 </div>
